--- a/frontEnd/src/main/webapp/WEB-INF/index.html
+++ b/frontEnd/src/main/webapp/WEB-INF/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
 <body>
+<form action="">
 
+
+</form>
 </body>
 </html>
