--- a/frontEnd/src/main/webapp/index.html
+++ b/frontEnd/src/main/webapp/index.html
@@ -1,8 +1,33 @@
 <html>
 <body>
-<form action="">
+	<!-- Mini Curso front-end -->
+	<form action="">
+		<!-- Formúlario -->
 
+		<table>
+			<tr>
+				<!-- abre linha -->
+				<td><label>Nome:</label></td>
+				<!-- <td> abre uma célula -->
+				<td><input type="text" id="nome" name="nome"></td>
+			</tr>
 
-</form>
+			<tr>
+				<td><label>Login:</label></td>
+				<td><input type="text" id="login" name="login"></td>
+			</tr>
+
+			<tr>
+				<td><label>Senha:</label></td>
+				<td><input type="password" id="senha" name="senha"></td>
+			</tr>
+
+			<tr>
+				<td/>
+				<td><input type="submit" value="Salvar"></td>
+			</tr>
+
+		</table>
+	</form>
 </body>
 </html>
