--- a/frontEnd/src/main/webapp/index.html
+++ b/frontEnd/src/main/webapp/index.html
@@ -1,30 +1,42 @@
 <html>
+<head>
+<style type="text/css">
+body {
+	text-transform: uppercase;
+}
+
+</style>
+</head>
 <body>
 	<!-- Mini Curso front-end -->
 	<form action="">
 		<!-- Formúlario -->
 
-		<table>
+		<table style="background-color: #1E90FF">
 			<tr>
 				<!-- abre linha -->
 				<td><label>Nome:</label></td>
 				<!-- <td> abre uma célula -->
-				<td><input type="text" id="nome" name="nome"></td>
+				<td><input type="text" id="nome" name="nome"
+					style="border-radius: 5px;"></td>
 			</tr>
 
 			<tr>
 				<td><label>Login:</label></td>
-				<td><input type="text" id="login" name="login"></td>
+				<td><input type="text" id="login" name="login"
+					style="border-radius: 5px;"></td>
 			</tr>
 
 			<tr>
 				<td><label>Senha:</label></td>
-				<td><input type="password" id="senha" name="senha"></td>
+				<td><input type="password" id="senha" name="senha"
+					style="border-radius: 5px;"></td>
 			</tr>
 
 			<tr>
-				<td/>
-				<td><input type="submit" value="Salvar"></td>
+				<td />
+				<td><input type="submit" value="Salvar"
+					style="width: 100%; border-radius: 5px;"></td>
 			</tr>
 
 		</table>
